Remove Overload bonus
Compensate by giving the Hanging bonus to weak doubly-attacked
non pawn enemies pieces.

STC: http://tests.stockfishchess.org/tests/view/5bfd53c40ebc5902bced9237
LLR: 2.96 (-2.94,2.94) [-3.00,1.00]
Total: 62107 W: 13664 L: 13622 D: 34821

LTC: http://tests.stockfishchess.org/tests/view/5bfd74700ebc5902bced9618
LLR: 2.96 (-2.94,2.94) [-3.00,1.00]
Total: 86406 W: 14381 L: 14365 D: 57660

A possible follow up would be to tune the hanging bonus and/or try to
simplify the hanging bonus condition.

Bench: 3810849

--- a/AUTHORS
+++ b/AUTHORS
@@ -20,9 +20,9 @@ Balint Pfliegel
 Ben Koshy (BKSpurgeon)
 Bill Henry (VoyagerOne)
 braich
+Bojun Guo (noobpwnftw)
 Brian Sheppard (SapphireBrand)
 Bryan Cross (crossbr)
-Bujun Guo (noobpwnftw)
 Chris Cain (ceebo)
 Dan Schmidt
 Daniel Dugovic (ddugovic)
@@ -31,7 +31,6 @@ David Zar
 Daylen Yang (daylen)
 DiscanX
 Eelco de Groot
-ElbertoOne
 erbsenzaehler
 Ernesto Gatti
 Fabian Beuke (madnight)
@@ -76,6 +75,7 @@ Leonardo Ljubičić (ICCF World Champion)
 Leonid Pechenik (lp--)
 Linus Arver
 loco-loco
+Lub van den Berg (ElbertoOne)
 Luca Brivio (lucabrivio)
 Lucas Braesch (lucasart)
 Lyudmil Antonov (lantonov)
